# tapaculo

./: Cargo.toml  README.md  publish.sh
benches/: auth.rs  pubsub.rs  rate_limit.rs  room.rs
examples/: chat_server.rs  chess_server.rs  custom_state.rs  server_with_redis.rs
src/: auth.rs  error.rs  lib.rs  main.rs  pubsub.rs  rate_limit.rs  room.rs  server.rs
src/pubsub/: memory.rs  mod.rs  redis.rs
