[package]
name = "tapaculo"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
async-trait = "0.1.89"
axum = { version = "0.8.4", features = ["macros"] }
chrono = "0.4.41"
dotenv = "0.15.0"
jsonwebtoken = "9.3.1"
redis = { version = "0.32.5", features = ["aio", "tokio-comp"], optional = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "2.0.16"
tokio = { version  = "1.45.0", features = ["full"] }
tokio-stream = "0.1.17"
tokio-tungstenite = "0.27.0"
tower-http = { version = "0.6.4", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[features]
default = ["inmemory"]
inmemory = []
redis-backend = ["dep:redis"]
